fixed icon section overflow

--- a/src/Footer.css
+++ b/src/Footer.css
@@ -8,7 +8,8 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: flex-start;
-    padding: 2rem 2rem;
+    padding: 2rem 1.5rem;
+    box-sizing: border-box;
 }
 
 .footer h1 {
