--- a/src/Logos.css
+++ b/src/Logos.css
@@ -7,7 +7,7 @@
 
 .logo-block {
     width: 75vw;
-    height: 75vh;
+    min-height: 75vh;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
